src/components/NavArrow/NavArrow.sass
@import '../../_sass/_constants.sass'
@import '../../_sass/_breakpoints.sass'

.nav-arrow-container
  height: 4.2rem
  width: 100%

.nav-arrow
  display: flex
  flex-direction: column
  align-items: center
  opacity: 0.7
  font-size: 0.773rem
  color: $black
  text-transform: lowercase
  text-decoration: none

.nav-arrow__arrow
  max-width: 2.5rem

.nav-arrow-container--down
  margin-top: 2.023rem

.nav-arrow--down>.nav-arrow__arrow
  order: 1

+for-tablet-portrait-up
  .nav-arrow__arrow
    max-width: 3rem

